[gd_scene load_steps=4 format=3 uid="uid://cnbcq8na6gypr"]

[ext_resource type="Script" path="res://bullets/wave_emitter.gd" id="1_tx5jj"]
[ext_resource type="Texture2D" uid="uid://demkp4ciyeskq" path="res://assets/normal/round.png" id="2_aruuc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vu8cn"]
radius = 80.0

[node name="WaveEmitter" type="Area2D"]
rotation = 1.5708
collision_layer = 0
collision_mask = 3
script = ExtResource("1_tx5jj")

[node name="EmitTimer" type="Timer" parent="."]

[node name="EmitPoint" type="Marker2D" parent="."]
position = Vector2(-6, 1.086e-05)
rotation = -1.5708
scale = Vector2(1, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.4, 2)
shape = SubResource("CircleShape2D_vu8cn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.44, 0.629)
texture = ExtResource("2_aruuc")
